--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "fmt:prepare": "prettier --write",
     "lint": "yarn run lint:prepare .",
     "lint:prepare": "eslint --cache --fix --quiet --format codeframe",
-    "pretest": "yarn del ./test/tmp",
-    "postpretest": "yarn make-dir ./test/tmp",
-    "reinstall": "yarn del ./node_modules ./yarn.lock",
+    "pretest": "del-cli ./test/tmp",
+    "postpretest": "make-dir ./test/tmp",
+    "reinstall": "del-cli ./node_modules ./yarn.lock",
     "postreinstall": "yarn setup",
     "setup": "yarn",
-    "test": "yarn node test/run.js",
-    "pretest:ci": "yarn pretest",
+    "test": "node test/run.js",
+    "pretest:ci": "yarn run pretest",
     "test:ci": "nyc node test/run.js",
     "test:jest": "jest --coverage"
   },
