--- a/package.json
+++ b/package.json
@@ -21,11 +21,10 @@
     "fmt:prepare": "prettier --write",
     "lint": "yarn run lint:prepare .",
     "lint:prepare": "eslint --cache --fix --quiet --format codeframe",
-    "pretest": "del-cli ./test/tmp",
-    "postpretest": "make-dir ./test/tmp",
     "reinstall": "del-cli ./node_modules ./yarn.lock",
     "postreinstall": "yarn setup",
     "setup": "yarn",
+    "pretest": "del-cli ./test/tmp && make-dir ./test/tmp",
     "test": "node test/run.js",
     "pretest:ci": "yarn run pretest",
     "test:ci": "nyc node test/run.js",
@@ -54,7 +53,7 @@
     "make-dir-cli": "^2.0.0",
     "nyc": "^15.0.0",
     "prettier": "^2.0.2",
-    "prettier-plugin-pkgjson": "^0.2.5",
+    "prettier-plugin-pkgjson": "^0.2.8",
     "request": "^2.88.2",
     "supertest": "^4.0.2",
     "urun": "^0.0.8",
