feat: custom file (re)naming, sanitizing - use the new `options.… (#591)
* feat: custom file (re)naming, options.file

If `options.filename` is passed and is function, it is passed with `part`.
Must return full absolute filepath for the file.
Still works with `options.keepExtensions`.

By default we rename the files to random id (joined to the uploadDir), generated from `hexoid` package.

* fix: normalize uploaddir, add it to default_options
* fix: running tests locally now works
* chore: update deps, publish canary-20200402.1

Signed-off-by: Charlike Mike Reagent <opensource@tunnckocore.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formidable",
-  "version": "2.0.0-canary.20200226.1",
+  "version": "2.0.0-canary.20200402.1",
   "license": "MIT",
   "description": "A node.js module for parsing form data, especially file uploads.",
   "homepage": "https://github.com/node-formidable/formidable",
@@ -21,39 +21,39 @@
     "fmt:prepare": "prettier --write",
     "lint": "yarn run lint:prepare .",
     "lint:prepare": "eslint --cache --fix --quiet --format codeframe",
-    "pretest": "yarn del ./test/tmp",
-    "postpretest": "yarn make-dir ./test/tmp",
-    "reinstall": "yarn del ./node_modules ./yarn.lock",
+    "reinstall": "del-cli ./node_modules ./yarn.lock",
     "postreinstall": "yarn setup",
     "setup": "yarn",
-    "test": "yarn node test/run.js",
-    "pretest:ci": "yarn pretest",
+    "pretest": "del-cli ./test/tmp && make-dir ./test/tmp",
+    "test": "node test/run.js",
+    "pretest:ci": "yarn run pretest",
     "test:ci": "nyc node test/run.js",
     "test:jest": "jest --coverage"
   },
   "dependencies": {
     "dezalgo": "^1.0.3",
+    "hexoid": "^1.0.0",
     "once": "^1.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@tunnckocore/prettier-config": "^1.3.5",
+    "@tunnckocore/prettier-config": "^1.3.8",
     "del-cli": "^3.0.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
     "express": "^4.17.1",
-    "husky": "^4.2.2",
-    "jest": "^25.1.0",
+    "husky": "^4.2.3",
+    "jest": "^25.2.6",
     "koa": "^2.11.0",
-    "lint-staged": "^10.0.7",
+    "lint-staged": "^10.1.1",
     "make-dir-cli": "^2.0.0",
     "nyc": "^15.0.0",
     "prettier": "^2.0.2",
-    "prettier-plugin-pkgjson": "^0.2.5",
+    "prettier-plugin-pkgjson": "^0.2.8",
     "request": "^2.88.2",
     "supertest": "^4.0.2",
     "urun": "^0.0.8",
