chore: pin versions

--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
   },
   "renovate": {
     "extends": [
-      "@tunnckocore"
+      "@tunnckocore",
+      ":pinAllExceptPeerDependencies"
     ]
   }
 }
