possible way to fix the bug

--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "jest": "25.4.0",
     "koa": "2.11.0",
     "lint-staged": "10.1.7",
+    "lodash.merge": "^4.6.2",
     "make-dir-cli": "2.0.0",
     "nyc": "15.0.1",
     "prettier": "2.0.5",
     "prettier-plugin-pkgjson": "0.2.8",
+    "qs": "^6.9.3",
     "request": "2.88.2",
     "supertest": "4.0.2",
     "urun": "0.0.8",
