fix: better handling of nested arrays when options.multiples (#621)

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "dependencies": {
     "dezalgo": "1.0.3",
     "hexoid": "1.0.0",
-    "once": "1.4.0"
+    "once": "1.4.0",
+    "qs": "^6.9.3"
   },
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
