docs: add a few keywords
fixes https://github.com/node-formidable/formidable/issues/660

--- a/package.json
+++ b/package.json
@@ -84,5 +84,15 @@
       "@tunnckocore",
       ":pinAllExceptPeerDependencies"
     ]
-  }
+  },
+  "keywords": [
+      "multipart",
+      "form",
+      "data",
+      "querystring",
+      "www",
+      "json",
+      "ulpoad",
+      "file"
+  ]
 }
