--- a/package.json
+++ b/package.json
@@ -28,10 +28,9 @@
     "postreinstall": "yarn setup",
     "setup": "yarn",
     "pretest": "del-cli ./test/tmp && make-dir ./test/tmp",
-    "test": "jest --coverage",
+    "test": "node  --experimental-vm-modules ./node_modules/jest/bin/jest.js --coverage",
     "pretest:ci": "yarn run pretest",
-    "test:ci": "nyc jest --coverage",
-    "test:jest": "jest --coverage"
+    "test:ci": "node --experimental-vm-modules node_modules/.bin/nyc jest --coverage" 
   },
   "dependencies": {
     "dezalgo": "1.0.3",
@@ -51,7 +50,7 @@
     "eslint-plugin-prettier": "3.1.3",
     "express": "4.17.1",
     "husky": "4.2.5",
-    "jest": "25.4.0",
+    "jest": "^26.6.3",
     "koa": "2.11.0",
     "lint-staged": "10.2.7",
     "make-dir-cli": "2.0.0",
