--- a/package.json
+++ b/package.json
@@ -49,15 +49,15 @@
     "eslint-plugin-prettier": "3.1.3",
     "express": "4.17.1",
     "husky": "4.2.5",
-    "jest": "^26.6.3",
+    "jest": "27.2.4",
     "koa": "2.11.0",
     "lint-staged": "10.2.7",
     "make-dir-cli": "2.0.0",
-    "nyc": "15.0.1",
+    "nyc": "15.1.0",
     "prettier": "2.0.5",
     "prettier-plugin-pkgjson": "0.2.8",
     "request": "2.88.2",
-    "supertest": "4.0.2"
+    "supertest": "6.1.6"
   },
   "jest": {
     "verbose": true
