chore: publish 2.0.0 as latest, include VERSION_NOTES.md in npm

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formidable",
-  "version": "2.0.0-canary.20210330",
+  "version": "2.0.0",
   "license": "MIT",
   "description": "A node.js module for parsing form data, especially file uploads.",
   "homepage": "https://github.com/node-formidable/formidable",
@@ -11,11 +11,12 @@
     "src",
     "CHANGELOG.md",
     "LICENSE",
-    "README.md"
+    "README.md",
+    "VERSION_NOTES.md"
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "canary"
+    "tag": "latest"
   },
   "scripts": {
     "bench": "node benchmark",
