--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "formidable",
-  "version": "2.0.0",
+
+  "version": "3.1.2-canary.20211030",
+
   "license": "MIT",
   "description": "A node.js module for parsing form data, especially file uploads.",
   "homepage": "https://github.com/node-formidable/formidable",
   "funding": "https://ko-fi.com/tunnckoCore/commissions",
   "repository": "node-formidable/formidable",
+  "type": "module",
   "main": "./src/index.js",
   "files": [
     "src",
@@ -16,7 +19,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "latest"
+    "tag": "3.x"
   },
   "scripts": {
     "bench": "node benchmark",
@@ -28,16 +31,14 @@
     "postreinstall": "yarn setup",
     "setup": "yarn",
     "pretest": "del-cli ./test/tmp && make-dir ./test/tmp",
-    "test": "jest --coverage",
+    "test": "node  --experimental-vm-modules ./node_modules/jest/bin/jest.js --coverage",
     "pretest:ci": "yarn run pretest",
-    "test:ci": "nyc jest --coverage",
-    "test:jest": "jest --coverage"
+    "test:ci": "node --experimental-vm-modules node_modules/.bin/nyc jest --coverage"
   },
   "dependencies": {
     "dezalgo": "1.0.3",
     "hexoid": "1.0.0",
-    "once": "1.4.0",
-    "qs": "6.9.3"
+    "once": "1.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
@@ -51,15 +52,15 @@
     "eslint-plugin-prettier": "3.1.3",
     "express": "4.17.1",
     "husky": "4.2.5",
-    "jest": "25.4.0",
+    "jest": "27.2.4",
     "koa": "2.11.0",
     "lint-staged": "10.2.7",
     "make-dir-cli": "2.0.0",
-    "nyc": "15.0.1",
+    "nyc": "15.1.0",
     "prettier": "2.0.5",
     "prettier-plugin-pkgjson": "0.2.8",
     "request": "2.88.2",
-    "supertest": "4.0.2"
+    "supertest": "6.1.6"
   },
   "jest": {
     "verbose": true
@@ -89,6 +90,7 @@
       ":pinAllExceptPeerDependencies"
     ]
   },
+  "packageManager": "yarn@1.22.11",
   "keywords": [
     "multipart",
     "form",
