--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "name": "formidable",
-
   "version": "3.1.2-canary.20211030",
-
   "license": "MIT",
   "description": "A node.js module for parsing form data, especially file uploads.",
   "homepage": "https://github.com/node-formidable/formidable",
@@ -19,7 +17,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "3.x"
+    "tag": "v3"
   },
   "scripts": {
     "bench": "node benchmark",
