--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formidable",
-  "version": "3.1.2-canary.20211030",
+  "version": "3.1.3",
   "license": "MIT",
   "description": "A node.js module for parsing form data, especially file uploads.",
   "homepage": "https://github.com/node-formidable/formidable",
@@ -9,11 +9,7 @@
   "type": "module",
   "main": "./src/index.js",
   "files": [
-    "src",
-    "CHANGELOG.md",
-    "LICENSE",
-    "README.md",
-    "VERSION_NOTES.md"
+    "src"
   ],
   "publishConfig": {
     "access": "public",
