chore: publish v2.0.1 to v2 tag

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formidable",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "license": "MIT",
   "description": "A node.js module for parsing form data, especially file uploads.",
   "homepage": "https://github.com/node-formidable/formidable",
@@ -8,15 +8,11 @@
   "repository": "node-formidable/formidable",
   "main": "./src/index.js",
   "files": [
-    "src",
-    "CHANGELOG.md",
-    "LICENSE",
-    "README.md",
-    "VERSION_NOTES.md"
+    "src"
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "latest"
+    "tag": "v2"
   },
   "scripts": {
     "bench": "node benchmark",
