--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-prettier": "3.1.3",
     "express": "4.17.1",
+    "formdata-polyfill": "^4.0.10",
     "husky": "4.2.5",
     "jest": "27.2.4",
     "koa": "2.11.0",
