chore: do not add reviewers to dep update prs
too much noise

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,4 +21,4 @@ updates:
       # Allow both direct and indirect updates for all packages
       - dependency-type: "all"
     rebase-strategy: "auto"
-    reviewers: ["node-formidable/core"]
+    reviewers: []
