--- a/package.json
+++ b/package.json
@@ -54,11 +54,22 @@
     "nyc": "15.1.0",
     "prettier": "2.0.5",
     "prettier-plugin-pkgjson": "0.2.8",
-    "supertest": "6.1.6"
+    "supertest": "6.1.6",
+    "typescript": "^4.6.3"
   },
   "jest": {
     "verbose": true
   },
+  "keywords": [
+    "multipart",
+    "form",
+    "data",
+    "querystring",
+    "www",
+    "json",
+    "ulpoad",
+    "file"
+  ],
   "husky": {
     "hooks": {
       "pre-commit": "git status --porcelain && yarn lint-staged",
@@ -78,21 +89,11 @@
       "yarn run lint"
     ]
   },
+  "packageManager": "yarn@1.22.17",
   "renovate": {
     "extends": [
       "@tunnckocore",
       ":pinAllExceptPeerDependencies"
     ]
-  },
-  "packageManager": "yarn@1.22.17",
-  "keywords": [
-    "multipart",
-    "form",
-    "data",
-    "querystring",
-    "www",
-    "json",
-    "ulpoad",
-    "file"
-  ]
+  }
 }
