--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "funding": "https://ko-fi.com/tunnckoCore/commissions",
   "repository": "node-formidable/formidable",
   "type": "module",
-  "main": "./src/index.js",
+  "main": "./lib/index.js",
   "files": [
     "src"
   ],
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "bench": "node benchmark",
+    "build": "tsc",
     "fmt": "yarn run fmt:prepare '**/*'",
     "fmt:prepare": "prettier --write",
     "lint": "yarn run lint:prepare .",
@@ -29,6 +30,9 @@
     "pretest:ci": "yarn run pretest",
     "test:ci": "node --experimental-vm-modules node_modules/.bin/nyc jest --coverage"
   },
+  "engines": {
+    "node": "^14.0.0"
+  },
   "dependencies": {
     "dezalgo": "1.0.3",
     "hexoid": "1.0.0",
@@ -39,6 +43,10 @@
     "@commitlint/config-conventional": "8.3.4",
     "@sindresorhus/slugify": "^2.1.0",
     "@tunnckocore/prettier-config": "1.3.8",
+    "@types/node": "^14.0.1",
+    "@types/once": "^1.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "del-cli": "3.0.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.1.0",
@@ -55,7 +63,8 @@
     "nyc": "15.1.0",
     "prettier": "2.0.5",
     "prettier-plugin-pkgjson": "0.2.8",
-    "supertest": "6.1.6"
+    "supertest": "6.1.6",
+    "typescript": "4.8.4"
   },
   "jest": {
     "verbose": true
