--- a/package.json
+++ b/package.json
@@ -7,15 +7,24 @@
   "funding": "https://ko-fi.com/tunnckoCore/commissions",
   "repository": "node-formidable/formidable",
   "type": "module",
-  "main": "./src/index.js",
+  "main": "./dist/index.cjs",
+  "exports": {
+    ".": "./src/index.js",
+    "./index.cjs": "./dist/index.cjs",
+    "./src/helpers/*.js": "./src/helpers/*.js",
+    "./src/parsers/*.js": "./src/parsers/*.js"
+  },
   "files": [
-    "src"
+    "src",
+    "dist"
   ],
   "publishConfig": {
     "access": "public",
     "tag": "latest"
   },
   "scripts": {
+    "build-package": "rollup --config ./tool/rollup.config.js",
+    "prepublishOnly": "npm t && npm run clean && npm run build",
     "bench": "node benchmark",
     "bench2prep": "node benchmark/server.js",
     "bench2": "bombardier --body-file=\"./README.md\" --method=POST --duration=10s --connections=100 http://localhost:3000/api/upload",
@@ -41,6 +50,8 @@
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
+    "@rollup/plugin-commonjs": "^25.0.2",
+    "@rollup/plugin-node-resolve": "^15.1.0",
     "@sindresorhus/slugify": "^2.1.0",
     "@tunnckocore/prettier-config": "1.3.8",
     "del-cli": "3.0.0",
@@ -59,6 +70,7 @@
     "nyc": "15.1.0",
     "prettier": "2.0.5",
     "prettier-plugin-pkgjson": "0.2.8",
+    "rollup": "^3.25.3",
     "supertest": "6.1.6"
   },
   "jest": {
