chore: publish to v2-latest
v2 is an invalid tag.
you can still install @v2
npm will treat it the same as @2.x

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "v2"
+    "tag": "v2-latest"
   },
   "scripts": {
     "bench": "node benchmark",
