--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-prettier": "3.1.3",
-    "express": "4.17.1",
+    "express": "^4.21.1",
     "formdata-polyfill": "^4.0.10",
     "husky": "4.2.5",
     "jest": "27.2.4",
