--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "test-specific": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=test/standalone/keep-alive-error.test.js",
     "test": "npm run test-jest && npm run test-node",
     "test-jest": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=test/ --coverage",
-    "test-node": "node --test test-node/",
+    "test-node": "node --test \"test-node/**/*.test.js\" --test-concurrency 1",
+    "test-node2": "node --test \"test-node/**/integration/**/*.test.js\" --test-concurrency 1",
     "pretest:ci": "yarn run pretest",
     "test:ci": "node --experimental-vm-modules node_modules/.bin/nyc jest --testPathPattern=test/ --coverage && node --experimental-vm-modules node_modules/.bin/nyc node --test test-node/"
   },
