chore: skip the linting on ci/cd
Signed-off-by: tunnckoCore <5038030+tunnckoCore@users.noreply.github.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,29 +7,29 @@ on:
     branches: [ master ]
 
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+  # lint:
+  #   name: Lint
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
+  #     - uses: oven-sh/setup-bun@v2
+  #       with:
+  #         bun-version: latest
 
-      - uses: actions/cache@v4
-        with:
-          path: |
-            ~/.bun/install/cache
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-
+  #     - uses: actions/cache@v4
+  #       with:
+  #         path: |
+  #           ~/.bun/install/cache
+  #         key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-bun-
 
-      - name: Install dependencies
-        run: bun install
+  #     - name: Install dependencies
+  #       run: bun install
 
-      - name: Run lint
-        run: bun run lint
+  #     - name: Run lint
+  #       run: bun run lint
 
   test:
     name: Test on ${{ matrix.os }}
