chore: updare readme
Signed-off-by: tunnckoCore <5038030+tunnckoCore@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "test-specific": "node --disable-warning=ExperimentalWarning --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=test/standalone/keep-alive-error.test.js",
     "test": "npm run test-specific && npm run test-jest && npm run test-node",
     "test-jest": "node --disable-warning=ExperimentalWarning --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=test/ --coverage",
-    "test-node": "node --disable-warning=ExperimentalWarning --test test-node/**/*.test.js",
+    "test-node": "node --disable-warning=ExperimentalWarning --test --experimental-test-coverage test-node/**/*.test.js",
     "pretest:ci": "yarn run pretest",
     "test:ci": "node --disable-warning=ExperimentalWarning --experimental-vm-modules node_modules/.bin/nyc jest --testPathPattern=test/ --coverage && node --disable-warning=ExperimentalWarning --experimental-vm-modules node_modules/.bin/nyc node --test test-node/"
   },
