--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "test:jest": "jest --coverage"
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.2",
     "dezalgo": "^1.0.4",
-    "hexoid": "^1.0.0",
+    "get-port": "^7.1.0",
     "once": "^1.4.0",
     "qs": "^6.11.0"
   },
@@ -47,9 +48,8 @@
     "eslint-plugin-prettier": "3.1.3",
     "express": "4.17.1",
     "husky": "4.2.5",
-    "jest": "25.4.0",
+    "jest": "27.2.4",
     "koa": "2.11.0",
-    "lint-staged": "10.2.7",
     "make-dir-cli": "2.0.0",
     "nyc": "15.0.1",
     "prettier": "2.0.5",
@@ -72,21 +72,13 @@
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "git status --porcelain && yarn lint-staged",
+      "pre-commit": "git status --porcelain",
       "commit-msg": "yarn commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
-    ]
-  },
-  "lint-staged": {
-    "!*.{js,jsx,ts,tsx}": [
-      "yarn run fmt:prepare"
-    ],
-    "*.{js,jsx,ts,tsx}": [
-      "yarn run lint"
     ]
   },
   "renovate": {
