--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formidable",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "license": "MIT",
   "description": "A node.js module for parsing form data, especially file uploads.",
   "homepage": "https://github.com/node-formidable/formidable",
@@ -30,14 +30,12 @@
     "test:jest": "jest --coverage"
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.2",
     "dezalgo": "^1.0.4",
-    "hexoid": "^1.0.0",
     "once": "^1.4.0",
     "qs": "^6.11.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "8.3.5",
-    "@commitlint/config-conventional": "8.3.4",
     "@tunnckocore/prettier-config": "1.3.8",
     "del-cli": "3.0.0",
     "eslint": "6.8.0",
@@ -47,9 +45,8 @@
     "eslint-plugin-prettier": "3.1.3",
     "express": "4.17.1",
     "husky": "4.2.5",
-    "jest": "25.4.0",
+    "jest": "27.2.4",
     "koa": "2.11.0",
-    "lint-staged": "10.2.7",
     "make-dir-cli": "2.0.0",
     "nyc": "15.0.1",
     "prettier": "2.0.5",
@@ -69,30 +66,5 @@
     "json",
     "ulpoad",
     "file"
-  ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "git status --porcelain && yarn lint-staged",
-      "commit-msg": "yarn commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
-  "lint-staged": {
-    "!*.{js,jsx,ts,tsx}": [
-      "yarn run fmt:prepare"
-    ],
-    "*.{js,jsx,ts,tsx}": [
-      "yarn run lint"
-    ]
-  },
-  "renovate": {
-    "extends": [
-      "@tunnckocore",
-      ":pinAllExceptPeerDependencies"
-    ]
-  }
+  ]
 }
