--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 
 !package.json
 !yarn.lock
+!pnpm-lock.yaml
 
 !**/src
 !**/src/**
@@ -66,7 +67,6 @@ test/tmp
 # # Package managers lockfiles
 # package-lock.json
 # shrinkwrap.json
-# pnpm-lock.json
 
 # # Logs
 # logs
