--- a/package.json
+++ b/package.json
@@ -48,23 +48,21 @@
   },
   "scripts": {
     "build-package": "rollup --config ./tool/rollup.config.js",
-    "prepublishOnly": "npm run build-package",
+    "prepublishOnly": "pnpm run build-package",
     "bench": "node benchmark",
     "bench2prep": "node benchmark/server.js",
     "bench2": "bombardier --body-file=\"./README.md\" --method=POST --duration=10s --connections=100 http://localhost:3000/api/upload",
-    "fmt": "yarn run fmt:prepare '**/*'",
+    "fmt": "pnpm run fmt:prepare '**/*'",
     "fmt:prepare": "prettier --write",
-    "lint": "yarn run lint:prepare .",
+    "lint": "pnpm run lint:prepare .",
     "lint:prepare": "eslint --cache --fix --quiet --format codeframe",
-    "reinstall": "del-cli ./node_modules ./yarn.lock",
-    "postreinstall": "yarn setup",
-    "setup": "yarn",
-    "pretest": "del-cli ./test/tmp && make-dir ./test/tmp",
+    "fresh": "rm -rf ./node_modules",
+    "pretest": "rm -rf ./test/tmp && mkdir ./test/tmp",
     "test-specific": "node --disable-warning=ExperimentalWarning --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=test/standalone/keep-alive-error.test.js",
-    "test": "npm run test-specific && npm run test-jest && npm run test-node",
+    "test": "pnpm audit --prod && pnpm run test-jest && pnpm run test-node",
     "test-jest": "node --disable-warning=ExperimentalWarning --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=test/ --coverage",
-    "test-node": "node --disable-warning=ExperimentalWarning --test --experimental-test-coverage test-node/**/*.test.js",
-    "pretest:ci": "yarn run pretest",
+    "test-node": "node --disable-warning=ExperimentalWarning --test test-node/**/*.test.js",
+    "pretest:ci": "pnpm run pretest",
     "test:ci": "node --disable-warning=ExperimentalWarning --experimental-vm-modules node_modules/.bin/nyc jest --testPathPattern=test/ --coverage && node --disable-warning=ExperimentalWarning --experimental-vm-modules node_modules/.bin/nyc node --test test-node/"
   },
   "dependencies": {
@@ -73,13 +71,10 @@
     "once": "^1.4.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "8.3.5",
-    "@commitlint/config-conventional": "8.3.4",
     "@rollup/plugin-commonjs": "^25.0.2",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@sindresorhus/slugify": "^2.1.0",
     "@tunnckocore/prettier-config": "1.3.8",
-    "del-cli": "3.0.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.1.0",
     "eslint-config-prettier": "6.11.0",
@@ -87,11 +82,8 @@
     "eslint-plugin-prettier": "3.1.3",
     "express": "^4.21.1",
     "formdata-polyfill": "^4.0.10",
-    "husky": "4.2.5",
     "jest": "27.2.4",
-    "koa": "2.11.0",
-    "lint-staged": "10.2.7",
-    "make-dir-cli": "2.0.0",
+    "koa": "2.16.1",
     "nyc": "15.1.0",
     "prettier": "2.0.5",
     "prettier-plugin-pkgjson": "0.2.8",
@@ -101,32 +93,7 @@
   "jest": {
     "verbose": true
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "git status --porcelain && yarn lint-staged",
-      "commit-msg": "yarn commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
-  "lint-staged": {
-    "!*.{js,jsx,ts,tsx}": [
-      "yarn run fmt:prepare"
-    ],
-    "*.{js,jsx,ts,tsx}": [
-      "yarn run lint"
-    ]
-  },
-  "renovate": {
-    "extends": [
-      "@tunnckocore",
-      ":pinAllExceptPeerDependencies"
-    ]
-  },
-  "packageManager": "yarn@1.22.17",
+  "packageManager": "pnpm@10.8.1",
   "keywords": [
     "multipart",
     "form",
