fix: remove os.machine, fix #994
Signed-off-by: tunnckoCore <5038030+tunnckoCore@users.noreply.github.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        node-version: ['lts/*']
+        node-version: [16, 18, 20, 22, 'lts/*']
 
     steps:
       - name: Checkout
